[gd_scene load_steps=4 format=2]

[ext_resource path="res://ScriptContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ScriptFileContainer.gd" type="Script" id=2]
[ext_resource path="res://scripts/FilePathContainer.tscn" type="PackedScene" id=3]

[node name="ScriptFileContainer" type="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1273.0
margin_bottom = 713.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1260.0
margin_bottom = 702.0

[node name="FilePathContainer" parent="VBoxContainer" instance=ExtResource( 3 )]
label_text = "Script path:"

[node name="ScriptContainer" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 1254.0
margin_bottom = 698.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="close_pressed" from="VBoxContainer/FilePathContainer" to="." method="_on_FilePathContainer_close_pressed"]
[connection signal="delete_pressed" from="VBoxContainer/FilePathContainer" to="." method="_on_FilePathContainer_delete_pressed"]
[connection signal="text_changed" from="VBoxContainer/ScriptContainer" to="." method="_on_ScriptContainer_text_changed"]
